fix layout issue

--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
     "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans",
     Arial, sans-serif;
   display: grid;
-  grid-template-rows: minmax(0px, auto) 1fr minmax(50px, auto);
+  grid-template-rows: minmax(60px, auto) 1fr minmax(60px, auto);
   align-items: center;
 
   gap: 1rem;
@@ -32,7 +32,7 @@ body > * {
   border: var(--border-template);
 }
 
-main > * {
+.hero > * {
   border: var(--border-template);
 }
 
@@ -46,21 +46,26 @@ footer {
 }
 
 main {
+  height: 100%;
+  background-color: rgb(214, 241, 214);
+}
+
+.hero {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 
   gap: 1rem;
   padding: min(16px, 2.4%);
-
   height: 100%;
-  background-color: rgb(214, 241, 214);
 }
 
 .main-grid-cell {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   background-color: rgb(240, 236, 195);
 
   min-height: 300px;
 
   padding: min(16px, 3%);
-  place-content: center;
 }
